# SuperSharpShooter

./: .requirements.txt.swp  Readme.md  pyproject.toml  requirements.txt
CSharpShooter/: SharpShooter.csproj
supersharpshooter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: sharpshooter.vba  sharpshooter.vbs
